[gd_scene load_steps=8 format=2]

[ext_resource path="res://art/moon_empty_star.png" type="Texture" id=1]
[ext_resource path="res://art/themes/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://src/ui/WinnerScreen.gd" type="Script" id=3]
[ext_resource path="res://sound/sfx/Menu1_SelectA.wav" type="AudioStream" id=4]
[ext_resource path="res://sound/sfx/Menu1_NavA.wav" type="AudioStream" id=5]
[ext_resource path="res://art/moon_full_star.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.235294, 0.235294, 0.235294, 1 )
shadow_size = 10

[node name="WinnerScreen" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -222.0
margin_top = -138.0
margin_right = 222.0
margin_bottom = 138.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
margin_left = 39.0
margin_top = 57.0
margin_right = 405.0
margin_bottom = 218.0
custom_constants/separation = 15

[node name="SuccessLabel" type="Label" parent="Panel/CenterContainer/VBoxContainer"]
visible = false
margin_right = 366.0
margin_bottom = 28.0
text = "Nice landing!"
align = 1

[node name="FailureLabel" type="Label" parent="Panel/CenterContainer/VBoxContainer"]
visible = false
margin_top = 38.0
margin_right = 366.0
margin_bottom = 66.0
align = 1

[node name="TimeLabel" type="Label" parent="Panel/CenterContainer/VBoxContainer"]
margin_right = 366.0
margin_bottom = 28.0
align = 1

[node name="StarContainer" type="HBoxContainer" parent="Panel/CenterContainer/VBoxContainer"]
margin_top = 43.0
margin_right = 366.0
margin_bottom = 75.0
alignment = 1

[node name="Star1" type="TextureRect" parent="Panel/CenterContainer/VBoxContainer/StarContainer"]
margin_left = 95.0
margin_right = 127.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 1 )

[node name="Star2" type="TextureRect" parent="Panel/CenterContainer/VBoxContainer/StarContainer"]
margin_left = 131.0
margin_right = 163.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 1 )

[node name="Star3" type="TextureRect" parent="Panel/CenterContainer/VBoxContainer/StarContainer"]
margin_left = 167.0
margin_right = 199.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 1 )

[node name="Star4" type="TextureRect" parent="Panel/CenterContainer/VBoxContainer/StarContainer"]
margin_left = 203.0
margin_right = 235.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 1 )

[node name="Star5" type="TextureRect" parent="Panel/CenterContainer/VBoxContainer/StarContainer"]
margin_left = 239.0
margin_right = 271.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 1 )

[node name="BackToLevelSelect" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 366.0
margin_bottom = 118.0
focus_mode = 0
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "Back to level selection"

[node name="Restart" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
margin_top = 133.0
margin_right = 366.0
margin_bottom = 161.0
theme = ExtResource( 2 )
text = "Restart"

[node name="HoverSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="ClickSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="StarPopupPanel" type="Panel" parent="."]
visible = false
margin_left = 322.0
margin_top = 101.0
margin_right = 710.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="StarPopupContainer" type="CenterContainer" parent="StarPopupPanel"]
margin_right = 394.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="StarPopupPanel/StarPopupContainer"]
margin_left = 197.0
margin_top = 37.0
margin_right = 197.0
margin_bottom = 37.0

[node name="EasyTarget" type="HBoxContainer" parent="StarPopupPanel/StarPopupContainer/VBoxContainer"]
visible = false
margin_right = 394.0
margin_bottom = 32.0

[node name="TextureRect" type="TextureRect" parent="StarPopupPanel/StarPopupContainer/VBoxContainer/EasyTarget"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="StarPopupPanel/StarPopupContainer/VBoxContainer/EasyTarget"]
margin_left = 36.0
margin_top = 2.0
margin_right = 394.0
margin_bottom = 30.0
text = "Landed on easy target "

[node name="MediumTarget" type="HBoxContainer" parent="StarPopupPanel/StarPopupContainer/VBoxContainer"]
visible = false
margin_right = 466.0
margin_bottom = 32.0

[node name="TextureRect" type="TextureRect" parent="StarPopupPanel/StarPopupContainer/VBoxContainer/MediumTarget"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 6 )

[node name="TextureRect2" type="TextureRect" parent="StarPopupPanel/StarPopupContainer/VBoxContainer/MediumTarget"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="StarPopupPanel/StarPopupContainer/VBoxContainer/MediumTarget"]
margin_left = 72.0
margin_top = 2.0
margin_right = 466.0
margin_bottom = 30.0
text = "Landed on medium target "

[node name="HardTarget" type="HBoxContainer" parent="StarPopupPanel/StarPopupContainer/VBoxContainer"]
visible = false
margin_right = 466.0
margin_bottom = 32.0

[node name="TextureRect" type="TextureRect" parent="StarPopupPanel/StarPopupContainer/VBoxContainer/HardTarget"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 6 )

[node name="TextureRect3" type="TextureRect" parent="StarPopupPanel/StarPopupContainer/VBoxContainer/HardTarget"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
texture = ExtResource( 6 )

[node name="TextureRect2" type="TextureRect" parent="StarPopupPanel/StarPopupContainer/VBoxContainer/HardTarget"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="StarPopupPanel/StarPopupContainer/VBoxContainer/HardTarget"]
margin_left = 108.0
margin_top = 2.0
margin_right = 466.0
margin_bottom = 30.0
text = "Landed on hard target "

[node name="Fuel" type="HBoxContainer" parent="StarPopupPanel/StarPopupContainer/VBoxContainer"]
visible = false
margin_top = 36.0
margin_right = 394.0
margin_bottom = 68.0

[node name="TextureRect" type="TextureRect" parent="StarPopupPanel/StarPopupContainer/VBoxContainer/Fuel"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="StarPopupPanel/StarPopupContainer/VBoxContainer/Fuel"]
margin_left = 36.0
margin_top = 2.0
margin_right = 270.0
margin_bottom = 30.0
text = "Fuel >500"

[node name="Velocity" type="HBoxContainer" parent="StarPopupPanel/StarPopupContainer/VBoxContainer"]
visible = false
margin_top = 72.0
margin_right = 394.0
margin_bottom = 104.0

[node name="TextureRect" type="TextureRect" parent="StarPopupPanel/StarPopupContainer/VBoxContainer/Velocity"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="StarPopupPanel/StarPopupContainer/VBoxContainer/Velocity"]
margin_left = 36.0
margin_top = 2.0
margin_right = 358.0
margin_bottom = 30.0
text = "Landing velocity <10"

[connection signal="mouse_entered" from="Panel/CenterContainer/VBoxContainer/StarContainer" to="." method="onStarContainerMouseEntered"]
[connection signal="mouse_exited" from="Panel/CenterContainer/VBoxContainer/StarContainer" to="." method="onStarContainerMouseExited"]
[connection signal="mouse_entered" from="Panel/CenterContainer/VBoxContainer/BackToLevelSelect" to="." method="onBackToLevelSelectMouseEntered"]
[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/BackToLevelSelect" to="." method="onBackToLevelSelectButtonPressed"]
[connection signal="mouse_entered" from="Panel/CenterContainer/VBoxContainer/Restart" to="." method="onRestartMouseEntered"]
[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/Restart" to="." method="onRestartButtonPressed"]
